--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,13 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<3.11"
+python = ">=3.10.0,<3.13"
 streamlit = "^1.27.2"
 requests = "^2.32.3"
+pyarrow = "14"
+pymongo = "^4.11.1"
+psycopg2 = "^2.9.10"
+watchdog = "^6.0.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
