--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 # Database Configuration
-DB_TYPE=postgres
-DB_HOST=localhost
-DB_NAME=your_db_name
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+MONGO_URI=mongodb://localhost:27017
+
+
+# Ollama Configuration
+OLLAMA_HOST=http://localhost:11434
+DEFAULT_MODEL=llama2
+OPENAI_API_KEY=sk-proj-xxxxxxxxx
+DEFAULT_OPENAI_MODEL= o3-mini
 
 # Ollama Configuration
 OLLAMA_HOST=http://localhost:11434
