--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pymongo = "^4.11.1"
 watchdog = "^6.0.0"
 python-dotenv = "^1.0.1"
 openai = "^1.64.0"
+pymilvus = "^2.5.4"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
